--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,6 +2,7 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
+  version: 3.4.3
   configuration: docs/source/conf.py
 
 # Optionally build your docs in additional formats such as PDF and ePub
