Add required os line in readthedocs setup file

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,3 +15,9 @@ python:
      - method: setuptools
        path: .
      - requirements: docs/requirements.txt
+
+# Set the OS, Python version and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.12"
