--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,9 +10,8 @@ formats: []
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3.12
   install:
-     - method: setuptools
+     - method: pip
        path: .
      - requirements: docs/requirements.txt
 
