--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,9 @@ license = "MIT"
 readme = "README.rst"
 requires-python = ">=3.11"
 dependencies = [
-    "pandas",
     "matplotlib",
+    "pandas",
+    "scipy",
 ]
 
 [project.urls]
