--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,16 @@
-[build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
-
 [project]
-name = "moana"
-version = "0.2.0"
-license = "MIT"
+name = "moana-pypi"
+dynamic = ["version"]
+description = "MOAna: Microlensing Observations ANAlysis tools"
 readme = "README.rst"
+license = "MIT"
+authors = [
+    { name = "Clément Ranc" },
+    { email = "ranc@iap.fr"},
+    { name = "Stela IS" },
+    { name = "Stela IS" },
+    { name = "MOAna authors" },
+]
 requires-python = ">=3.11"
 dependencies = [
     "matplotlib",
@@ -16,3 +20,19 @@ dependencies = [
 
 [project.urls]
 "Homepage" = "https://github.com/clementranc/moana"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.version]
+path = "src/moana/__about__.py"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/moana"]
+
+[[tool.hatch.envs.all.matrix]]
+python = ["3.11", "3.12"]
+
+[tool.hatch.envs.default.scripts]
+test = "pytest {args:tests}"
