--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,13 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "matplotlib",
-    "pandas",
-    "scipy",
+    "matplotlib>=3.8.4",
+    "pandas>=2.1.4",
+    "scipy>=1.14.1",
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/clementranc/moana"
+Homepage = "https://github.com/clementranc/moana"
 
 [build-system]
 requires = ["hatchling"]
